[package]
name = "modbreeze"
version = "0.1.0"
edition = "2021"
authors = [
    "Mr. Icecream",
]
description = "A modpack manager for Minecraft with support for defining modpacks via a .TOML file, allowing sharing modpacks easily."
repository = "https://github.com/Mr1cecream/ModBreeze"
categories = ["command-line-utils"]
readme = "README.md"
license = "GPL-3.0"
keywords = ["minecraft", "mod-manager", "curseforge"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.5.9"
serde = { version = "1.0.137", features = ["derive"] }
thiserror = "1.0.24"
anyhow = "1.0.58"
log = "0.4.17"
fern = "0.6.1"
chrono = "0.4.19"
libium = "1.18.3"
furse = "1.4.0"
itertools = "0.10.3"
tokio = { version = "1.19.2", default-features = false, features = [
    "rt-multi-thread",
    "macros",
    "fs",
] }
fs_extra = "1.2.0"
clap = { version = "3.2.6", features = ["derive"] }
url = "2.2.2"
ureq = "2.4.0"
serde_json = "1.0.81"
dirs = "4.0.0"

[profile.release]
strip = true
lto = true
codegen-units = 1
