[package]
name = "modbreeze"
version = "0.2.0"
edition = "2021"
authors = [
    "Mr. Icecream",
]
description = "A modpack manager for Minecraft with support for defining modpacks via a .TOML file, allowing sharing modpacks easily."
repository = "https://github.com/Mr1cecream/ModBreeze"
categories = ["command-line-utils"]
readme = "README.md"
license = "GPL-3.0"
keywords = ["minecraft", "mod-manager", "curseforge"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.5.9"
serde = { version = "1.0.147", features = ["derive"] }
thiserror = "1.0.37"
anyhow = "1.0.66"
log = "0.4.17"
fern = "0.6.1"
chrono = "0.4.22"
libium = "1.20.0"
furse = "1.5.5"
itertools = "0.10.5"
tokio = { version = "1.21.2", default-features = false, features = [
    "rt-multi-thread",
    "macros",
    "fs",
] }
fs_extra = "1.2.0"
clap = { version = "4.0.18", features = ["derive"] }
url = "2.2.2"
ureq = "2.5.0"
serde_json = "1.0.87"
dirs = "4.0.0"
rayon = "1.5.3"
promptly = "0.3.1"
futures = "0.3.25"
async-recursion = "1.0.0"

[profile.release]
strip = true
lto = true
codegen-units = 1
