[package]
name = "modbreeze"
version = "0.3.1"
edition = "2021"
authors = [
    "Mr. Icecream",
]
description = "A modpack manager for Minecraft with support for defining modpacks via a .TOML file, allowing sharing modpacks easily."
repository = "https://github.com/Mr1cecream/ModBreeze"
categories = ["command-line-utils"]
readme = "README.md"
license = "GPL-3.0"
keywords = ["minecraft", "mod-manager", "curseforge"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.7.2"
serde = { version = "1.0.154", features = ["derive"] }
thiserror = "1.0.39"
anyhow = "1.0.69"
log = "0.4.17"
fern = "0.6.1"
chrono = "0.4.23"
libium = "1.21.2"
furse = "1.5.8"
itertools = "0.10.5"
tokio = { version = "1.21.2", default-features = false, features = [
    "rt-multi-thread",
    "macros",
    "fs",
] }
fs_extra = "1.3.0"
clap = { version = "4.1.8", features = ["derive"] }
url = "2.2.2"
serde_json = "1.0.94"
dirs = "4.0.0"
rayon = "1.7.0"
promptly = "0.3.1"
futures = "0.3.27"
async-recursion = "1.0.2"
indicatif = "0.17.3"
reqwest = "0.11.14"

[profile.release]
strip = true
lto = true
codegen-units = 1
